k8s/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pi-ui
  namespace: app-staging
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pi-ui
  template:
    metadata:
      labels:
        app: pi-ui
    spec:
      containers:
        - name: pi-ui
          image: erickhdez1997/pi-ui:staging
          ports:
            - containerPort: 80
