k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pi-ui
  namespace: app-staging
spec:
  selector:
    app: pi-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
