k8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pi-ui-staging-ingress
  namespace: app-staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
  - host: qtpis.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pi-ui-staging
            port:
              number: 80
